--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,13 @@ license = GPL_3
 copyright_holder = Elmar S. Heeb
 copyright_year   = 2015
 
-version = 1.0
+version = 1.0.1
 
 [@Author::HEEB]
+
+[Prereqs]
+Dist::Zilla = 0
+Dist::Zilla::Plugin::PodWeaver = 0
+
+[Prereqs / TestRequires]
+Dist::Zilla::Plugin::Test::Perl::Critic = 0
